Check the flag for AspectJ