@@ -68,6 +68,7 @@
                         <suiteXmlFile>${suite-xml-file}</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <properties>
