@@ -62,6 +62,7 @@
                     </suiteXmlFiles>
                     <!-- testFailureIgnore>true</testFailureIgnore -->
                     <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <properties>
